Fri Oct 21 16:06:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): retry after GC when the limit for open
	  file descriptors reached.

Fri Oct 21 11:34:17 2016  Pascal Schmid  <Lechindianer@users.noreply.github.com>

	* string.c (rb_str_sub, rb_str_gsub): [DOC] 'backlash' should read
	  'backslash'.  [Fix GH-1461]

Thu Oct 20 17:02:56 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/uri/common.rb: added documentation for deprecated method.
	  [Misc #11960][ruby-core:72733][ci skip]

Thu Oct 20 16:57:23 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/digest/digest.c: Add documentation for Digest.
	  [Feature #10452][ruby-core:66001][ci skip]
	  * remove HMAC from list of digest algorithms,
	  * add MD5 in list of digest algorithms,
	  * add information about writing a C digest implementation using Digest::Base,
	  * add documentation for Digest::Base public methods.
	* ext/digest/md5/md5init.c: add examples for MD5.
	* ext/digest/rmd160/rmd160init.c: add examples for Digest::RMD160.
	* ext/digest/sha1/sha1init.c: add examples for Digest::SHA1.

Thu Oct 20 16:19:51 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/open-uri.rb: Improved documentation grammar for
	  open-uri#open option. [Misc #11329][ruby-core:69868][ci skip]

Wed Oct 19 21:48:40 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: mention refinements with Kernel#send and
	  BasicObject#__send__.  [Feature #11476]

Wed Oct 19 17:02:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_opt_send): enable refinements with
	  Kernel#send and BasicObject#__send__.  [Feature #11476]

Wed Oct 19 14:22:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* basictest/runner.rb: do not clobber the option by --run-opt with
	  RUBYOPT.  reported by Allen Hewes <rallenh AT hotmail.com>.

Wed Oct 19 00:09:06 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* addr2line.c (parse_debug_line_cu): boundary checks for